--- a/src/app/playground/playground.component.html
+++ b/src/app/playground/playground.component.html
@@ -8,8 +8,22 @@
       <app-login *ngIf="!storageService.isAuthenticated()"></app-login>
     </div>
     <div class="border-b bg-gray-800 border-gray-800">
-      <label class="block py-3 px-1">
-        <small class="text-xs opacity-50 px-1">Select template</small>
+      <label class="block py-3 pb-0 px-0 relative">
+        <div class="flex justify-between">
+          <small class="text-xs opacity-50 px-1">Theme</small>
+          <button *ngIf="storageService.isAuthenticated()"
+            class=" transition-all duration-500 text-center flex text-xs items-center justify-center px-1 font-bold text-white "
+            (click)="cloneTheme()">
+            <span class="hover:text-gray-400">Clone</span>
+            <div class="w-5 h-5 pl-1 flex justify-center items-center">
+              <svg class="w-4 h-4" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                  d="M8 16H6a2 2 0 01-2-2V6a2 2 0 012-2h8a2 2 0 012 2v2m-6 12h8a2 2 0 002-2v-8a2 2 0 00-2-2h-8a2 2 0 00-2 2v8a2 2 0 002 2z" />
+              </svg>
+            </div>
+          </button>
+        </div>
         <select class="form-select px-1 mt-1 text-sm py-1 block w-full bg-gray-700" [(ngModel)]="themeID"
           (change)="themeSelected()">
           <option *ngFor="let t of themes" [value]="t.id">
@@ -17,46 +31,19 @@
           </option>
         </select>
       </label>
-      <div class="grid grid-cols-1 gap-2 w-full px-1 pb-2">
-        <button *ngIf="
-          storageService.isAuthenticated() &&
-          storageService.getCurrentUser().id == theme.author.id
-        " class="bg-green-700 hover:bg-green-600  transition-all duration-500 transform rounded-sm text-center flex text-sm items-center justify-center px-1 py-1 font-bold text-white"
-          (click)="saveTheme()">
-
-          <span class="">Save</span>
-          <svg class="w-5 h-5 pl-1 flex justify-center items-center" xmlns="http://www.w3.org/2000/svg" fill="none"
-            viewBox="0 0 24 24" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
-          </svg>
-        </button>
-        <button *ngIf="storageService.isAuthenticated()"
-          class="bg-blue-700 hover:bg-blue-600 transition-all duration-500 transform rounded-sm text-center flex text-sm items-center justify-center px-1 py-1 font-bold text-white"
-          (click)="cloneTheme()">
-          <span class="">Clone</span>
-          <div class="w-5 h-5 pl-1 flex justify-center items-center">
-            <svg class="w-4 h-4" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-              stroke="currentColor">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                d="M8 16H6a2 2 0 01-2-2V6a2 2 0 012-2h8a2 2 0 012 2v2m-6 12h8a2 2 0 002-2v-8a2 2 0 00-2-2h-8a2 2 0 00-2 2v8a2 2 0 002 2z" />
-            </svg>
-          </div>
-        </button>
-
-      </div>
     </div>
     <div class="space-y-1 text-xs mt-4">
       <div>
         <div class="space-y-1">
-          <div class="py-1 pl-4 border-b border-gray-700 hover:text-orange-300 font-bold cursor-pointer"
+          <div class="py-1 pb-2 pl-2 border-b border-gray-700 hover:text-orange-300 font-bold cursor-pointer"
             (click)="setFile('landingQuery', 'graphql')">
             landing<span class="text-orange-500">.graphql</span>
           </div>
-          <div class="py-1 pl-4 border-b border-gray-700 hover:text-orange-300 font-bold cursor-pointer"
+          <div class="py-1 pb-2 pl-2 border-b border-gray-700 hover:text-orange-300 font-bold cursor-pointer"
             (click)="setFile('articlesQuery', 'graphql')">
             articles<span class="text-orange-500">.graphql</span>
           </div>
-          <div class="py-1 pl-4 border-b border-gray-600 hover:text-orange-300 font-bold cursor-pointer"
+          <div class="py-1 pb-2 pl-2 border-b border-gray-600 hover:text-orange-300 font-bold cursor-pointer"
             (click)="setFile('articleQuery', 'graphql')">
             article<span class="text-orange-500">.graphql</span>
           </div>
@@ -64,19 +51,34 @@
       </div>
       <div class="">
         <div class="space-y-1">
-          <div class="py-1 pl-4 border-b border-gray-700 hover:text-blue-300 font-bold cursor-pointer"
+          <div class="py-1 pb-2 pl-2 border-b border-gray-700 hover:text-blue-300 font-bold cursor-pointer"
             (click)="setFile('landingTemplate', 'html')">
             landing<span class="text-blue-500">.html</span>
           </div>
-          <div class="py-1 pl-4 border-b border-gray-700 hover:text-blue-300 font-bold cursor-pointer"
+          <div class="py-1 pb-2 pl-2 border-b border-gray-700 hover:text-blue-300 font-bold cursor-pointer"
             (click)="setFile('articlesTemplate', 'html')">
             articles<span class="text-blue-500">.html</span>
           </div>
-          <div class="py-1 pl-4 border-b border-gray-700 hover:text-blue-300 font-bold cursor-pointer"
+          <div class="py-1 pb-2 pl-2 border-b border-gray-700 hover:text-blue-300 font-bold cursor-pointer"
             (click)="setFile('articleTemplate', 'html')">
             article<span class="text-blue-500">.html</span>
           </div>
         </div>
+      </div>
+
+      <div class="grid grid-cols-1 gap-2 w-full px-1 pt-3 pb-2">
+        <button *ngIf="
+          storageService.isAuthenticated() &&
+          storageService.getCurrentUser().id == theme.author.id
+        " class="bg-green-700 hover:bg-green-600  transition-all duration-500 transform rounded-sm text-center flex text-sm items-center justify-center px-1 py-1 font-bold text-white"
+          (click)="saveTheme()">
+
+          <span class="">Save file</span>
+          <svg class="w-5 h-5 pl-1 flex justify-center items-center" xmlns="http://www.w3.org/2000/svg" fill="none"
+            viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+          </svg>
+        </button>
       </div>
 
       <div class=" px-1 py-12  grid grid-cols-1  w-full  mb-1">
@@ -99,8 +101,8 @@
 
     </div>
   </div>
-  <div class="w-full bg-gray-900  pt-5 overflow-hidden">
-    <ngx-monaco-editor style="height: 95vh; width: 100%" [options]="editorOptions" [(ngModel)]="code"
+  <div class="w-full bg-gray-900 pt-5 overflow-hidden">
+    <ngx-monaco-editor style="height: 97vh; width: 100%" class="overflow-hidden" [options]="editorOptions" [(ngModel)]="code"
       automaticLayout="true"></ngx-monaco-editor>
   </div>
 </div>
