--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="loading">
-  <div class="fixed inset-0 text-white flex flex-col justify-center items-center bg-gray-900">
-    <svg xmlns="http://www.w3.org/2000/svg" class="h-12 w-full mb-2" stroke="#fff" viewBox="0 0 38 38">
+  <div class="fixed inset-0 flex flex-col items-center justify-center text-white bg-gray-900">
+    <svg xmlns="http://www.w3.org/2000/svg" class="w-full h-12 mb-2" stroke="#fff" viewBox="0 0 38 38">
       <g transform="translate(1 1)" stroke-width="2" fill="none" fill-rule="evenodd">
         <circle stroke-opacity=".5" cx="18" cy="18" r="18" />
         <path d="M36 18c0-9.94-8.06-18-18-18">
@@ -14,45 +14,37 @@
   </div>
 </div>
 <div *ngIf="error">
-  <div class="fixed inset-0 text-white flex flex-col justify-center items-center bg-gray-900">
+  <div class="fixed inset-0 flex flex-col items-center justify-center text-white bg-gray-900">
     <span>Error :(</span>
   </div>
 </div>
 
-<div *ngIf="theme" class="overflow-hidden relative max-h-screen">
-  <div class="absolute flex items-center justify-center w-full px-4 bottom-0 right-0 py-1 z-50 border-b border-gray-800"
-    style="background: rgba(0, 0, 0, .5)">
-    <div class="flex items-center">
-      <span class="font-mono text-white mr-4">KushTeam.dev</span>
-      <svg class="w-4 h-4 text-white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
-        <path fill-rule="evenodd" d="M7.3 14.7a1 1 0 010-1.4l3.3-3.3-3.3-3.3a1 1 0 011.4-1.4l4 4a1 1 0 010 1.4l-4 4a1 1 0 01-1.4 0z" clip-rule="evenodd"/>
-      </svg>
-      <span class="font-mono text-white ml-4">Original</span>
-      <span class="font-mono text-white ml-2 opacity-50">by Santuan</span>
-    </div>
-    <div class="flex-1 flex items-center justify-end py-2 ">
+<div *ngIf="theme" class="relative max-h-screen overflow-hidden">
+  <div class="absolute bottom-0 right-0 z-50 flex items-center justify-center w-full px-4 transition-all duration-200 opacity-75 hover:opacity-100"
+    style="background: rgba(17, 24, 39, .8)">
+    <div class="flex items-center justify-end py-3 pt-2 ">
       <button (click)="openCodeEditor()"
-        class="opacity-75 w-5 h-5 mr-5 hover:opacity-100 transition-all duration-500 transform outline-none" [ngClass]="{
+        class="w-5 h-5 mr-5 transition-all duration-500 transform outline-none opacity-75 hover:opacity-100" [ngClass]="{
           'opacity-100': isOpen
         }">
         <svg xmlns="http://www.w3.org/2000/svg" overflow="visible" viewBox="0 0 62.3 62.3">
           <path d="M9 2h44.2c4 0 7.1 3.2 7.1 7v44.2c0 4-3.2 7.1-7 7.1H9a7 7 0 01-7.1-7V9C2 5 5.2 2 9 2z" fill="none"
-            stroke="#f9f9f9" stroke-width="4" stroke-miterlimit="10" />
-          <path d="M31.2 60.3V2h22c4 0 7.1 3.2 7.1 7v44.2c0 4-3.2 7.1-7 7.1H31.1z" fill="#f9f9f9" />
+            stroke="#fff" stroke-width="4" stroke-miterlimit="10" />
+          <path d="M31.2 60.3V2h22c4 0 7.1 3.2 7.1 7v44.2c0 4-3.2 7.1-7 7.1H31.1z" fill="#fff" />
         </svg>
       </button>
       <button (click)="closeCodeEditor()"
-        class="w-5 h-5 opacity-50 hover:opacity-100 transition-all duration-500 transform outline-none" [ngClass]="{
+        class="w-5 h-5 transition-all duration-500 transform outline-none opacity-50 hover:opacity-100" [ngClass]="{
           'opacity-100': !isOpen
         }">
         <svg xmlns="http://www.w3.org/2000/svg" overflow="visible" viewBox="0 0 62.3 62.3">
           <path d="M53.2 60.3H9.1a7 7 0 01-7.1-7V9C2 5 5.2 2 9 2h44.2c4 0 7.1 3.2 7.1 7v44.2c0 4-3.1 7.1-7 7.1z"
-            fill="#f9f9f9" stroke="#f9f9f9" stroke-width="4" stroke-miterlimit="10" />
+            fill="#fff" stroke="#fff" stroke-width="4" stroke-miterlimit="10" />
         </svg>
       </button>
     </div>
   </div>
-  <div class="flex w-full h-screen overflow-hidden relative" >
+  <div class="relative flex w-full h-screen overflow-hidden" >
     <as-split direction="horizontal" (dragEnd)="splitResize($event)" [gutterSize]=4 [useTransition]=true>
       <as-split-area [size]="codeSize">
         <app-playground [theme]="theme" [themes]="themeList"></app-playground>
