--- a/src/app/playground/playground.component.html
+++ b/src/app/playground/playground.component.html
@@ -1,6 +1,6 @@
 <div class="relative flex font-mono">
   <div
-    class="left-0 z-40 w-64 min-h-screen m-0 overflow-x-hidden overflow-y-auto font-mono text-white transition-all duration-200 delay-100 transform bg-gray-900 border-r-2 border-gray-800 shadow-lg"
+    class="left-0 z-40 w-48 min-h-screen m-0 overflow-x-hidden overflow-y-auto font-mono text-white transition-all duration-200 delay-100 transform bg-gray-900 border-r-2 border-gray-800 shadow-lg"
     style="z-index: 999;">
     <div class="w-full">
       <a class="block w-full py-1 text-sm font-bold text-center text-gray-400 bg-gray-700 cursor-pointer hover:bg-red-500 hover:text-white"
@@ -35,35 +35,35 @@
       </label>
     </div>
     <div class="mt-4 space-y-1 text-sm">
-      <div class="">
-        <div class="space-y-1">
-          <div class="py-1 pb-2 pl-2 font-bold border-b border-gray-700 cursor-pointer hover:text-blue-300"
-            (click)="setFile('landingTemplate', 'html')">
-            <span class="text-blue-400">html.</span>landing
+      <div class="pt-2">
+        <div class="space-y-3">
+          <div class="pl-2 font-bold border-b border-gray-700 cursor-pointer hover:text-orange-300"
+            (click)="setFile('landingQuery', 'graphql')">
+            Hero<span class="text-orange-500">.graphql</span>
           </div>
-          <div class="py-1 pb-2 pl-2 font-bold border-b border-gray-700 cursor-pointer hover:text-blue-300"
-            (click)="setFile('articlesTemplate', 'html')">
-            <span class="text-blue-400">html.</span>articles
+          <div class="pl-2 font-bold border-b border-gray-700 cursor-pointer hover:text-orange-300"
+            (click)="setFile('articlesQuery', 'graphql')">
+            List<span class="text-orange-500">.graphql</span>
           </div>
-          <div class="py-1 pb-2 pl-2 font-bold border-b border-gray-700 cursor-pointer hover:text-blue-300"
-            (click)="setFile('articleTemplate', 'html')">
-            <span class="text-blue-400">html.</span>article
+          <div class="pl-2 font-bold border-b border-gray-600 cursor-pointer hover:text-orange-300"
+            (click)="setFile('articleQuery', 'graphql')">
+            Article<span class="text-orange-500">.graphql</span>
           </div>
         </div>
       </div>
-      <div>
-        <div class="space-y-1">
-          <div class="py-1 pb-2 pl-2 font-bold border-b border-gray-700 cursor-pointer hover:text-yellow-300"
-            (click)="setFile('landingQuery', 'graphql')">
-            <span class="text-yellow-500">graphql.</span>landing
+      <div class="pt-6">
+        <div class="space-y-3">
+          <div class="pl-2 font-bold border-b border-gray-700 cursor-pointer hover:text-blue-300"
+            (click)="setFile('landingTemplate', 'html')">
+            Hero<span class="text-blue-400">.html</span>
           </div>
-          <div class="py-1 pb-2 pl-2 font-bold border-b border-gray-700 cursor-pointer hover:text-yellow-300"
-            (click)="setFile('articlesQuery', 'graphql')">
-            <span class="text-yellow-500">graphql.</span>articles
+          <div class="pl-2 font-bold border-b border-gray-700 cursor-pointer hover:text-blue-300"
+            (click)="setFile('articlesTemplate', 'html')">
+            List<span class="text-blue-400">.html</span>
           </div>
-          <div class="py-1 pb-2 pl-2 font-bold border-b border-gray-600 cursor-pointer hover:text-yellow-300"
-            (click)="setFile('articleQuery', 'graphql')">
-            <span class="text-yellow-500">graphql.</span>article
+          <div class="pl-2 font-bold border-b border-gray-700 cursor-pointer hover:text-blue-300"
+            (click)="setFile('articleTemplate', 'html')">
+            Article<span class="text-blue-400">.html</span>
           </div>
         </div>
       </div>
@@ -81,26 +81,24 @@
     </div>
     <div class="absolute bottom-0 grid w-full grid-cols-1 bg-gray-700">
       <a href="https://github.com/kush-team" target="_blank"
-        class="flex items-center justify-between p-2 py-3 font-mono font-bold text-left text-center text-white hover:bg-gray-800">
-        <span class="text-sm leading-tight text-gray-100">Kush Team</span>
-
+        class="flex items-center justify-between p-2 py-3 font-mono font-bold text-left text-white hover:bg-gray-800">
+        <span class="text-xs leading-tight text-gray-100">Kush Team</span>
         <div class="flex items-center justify-center pr-2" href="https://github.com/kush-team" target="_blank">
           <img class="w-4 h-4" src="assets/GitHub-Mark-Light-32px.png" />
         </div>
       </a>
       <a href="https://www.buymeacoffee.com/kushteam" target="_blank"
-        class="flex items-center justify-between p-2 py-3 font-mono font-bold text-left text-center text-white bg-yellow-500 hover:bg-yellow-600">
-        <span class="text-sm leading-tight text-gray-900">Buy us a coffee</span>
+        class="flex items-center justify-between p-2 py-3 font-mono font-bold text-left text-white bg-yellow-500 hover:bg-yellow-600">
+        <span class="text-xs leading-tight text-gray-900">Buy us a coffee</span>
 
         <div class="flex items-center justify-center pr-2" href="https://www.buymeacoffee.com/kushteam" target="_blank">
           <img class="w-4 h-4" src="https://cdn.buymeacoffee.com/buttons/bmc-new-btn-logo.svg" />
         </div>
       </a>
-
     </div>
   </div>
-  <div class="w-full pt-5 overflow-hidden bg-gray-900">
-    <ngx-monaco-editor style="height: 96vh; width: 100%" class="overflow-hidden" [options]="editorOptions"
+  <div class="w-full overflow-hidden bg-gray-900">
+    <ngx-monaco-editor style="height: 98vh; width: 100%" class="overflow-hidden" [options]="editorOptions"
       [(ngModel)]="code" automaticLayout="true"></ngx-monaco-editor>
   </div>
 </div>
